# build-your-own-interpreter

./: .gitignore  Dockerfile  README.md  course.yml  extensions.yml
extensions/evaluating-expressions/01-iz6-literals-booleans-and-nil/: instruction.md  stage.yml
extensions/evaluating-expressions/02-lv1-literals-strings-and-numbers/: stage.yml  task.md
extensions/evaluating-expressions/03-oq9-parentheses/: stage.yml  task.md
extensions/parsing-expressions/01-sc2-booleans-and-nil/: stage.yml  task.md
extensions/parsing-expressions/02-ra8-number-literals/: stage.yml  task.md
extensions/parsing-expressions/03-th5-string-literals/: instruction.md  stage.yml
stages/01-ry8-scanning-empty-file/: instruction.md  solution.md  stage.yml
stages/01-ry8-scanning-empty-file/solution/diff/src/: main.rs.diff
stages/02-ol4-scanning-parentheses/: solution.md  stage.yml
stages/03-oe8-scanning-braces/: stage.yml  task.md
template/: Cargo.toml  Dockerfile  README.md  codecraft.yml  stackclass.yml  your_program.sh
template/.codecraft/: compile.sh  run.sh
template/.stackclass/: compile.sh  run.sh
template/src/: main.rs
