[package]
name = "stackclass-interpreter"
version = "0.1.0"
authors = ["StackClass <hello@stackclass.dev>"]
edition = "2021"

[dependencies]
anyhow = "1.0.98"                                # error handling
bytes = "1.10.1"                                 # helps manage buffers
thiserror = "2.0.12"                             # error handling
